@@ -25,8 +25,9 @@
 			<label index="date">Modified</label>
 			<label index="filesize">Filesize</label>
 			<label index="no_files">No files or folders found in this directory!</label>
-			<label index="file_in_directory">File</label>
-			<label index="files_in_directory">Files</label>
+			<label index="directory_size.no_files">No files</label>
+			<label index="directory_size.one_file">File</label>
+			<label index="directory_size.multiple_files">Files</label>
 			<label index="newFile">new</label>
 			<label index="sort.asc">Sort ascending</label>
 			<label index="sort.desc">Sort descending</label>
@@ -58,8 +59,9 @@
 			<label index="date">Geändert</label>
 			<label index="filesize">Dateigrösse</label>
 			<label index="no_files">Keine Dateien oder Ordner im Verzeichnis!</label>
-			<label index="file_in_directory">Datei</label>
-			<label index="files_in_directory">Dateien</label>
+			<label index="directory_size.no_files">Keine Dateien</label>
+			<label index="directory_size.one_file">Datei</label>
+			<label index="directory_size.multiple_files">Dateien</label>
 			<label index="newFile">neu</label>
 			<label index="sort.asc">Aufsteigend sortieren</label>
 			<label index="sort.desc">Absteigend sortieren</label>
@@ -84,8 +86,9 @@
 			<label index="date">Modification</label>
 			<label index="filesize">Taille</label>
 			<label index="no_files">Il n'y a aucun fichier dans le répertoire !</label>
-			<label index="file_in_directory">Fichier</label>
-			<label index="files_in_directory">Fichiers</label>
+			<label index="directory_size.no_files">Aucun fichier</label>
+			<label index="directory_size.one_file">Fichier</label>
+			<label index="directory_size.multiple_files">Fichiers</label>
 			<label index="newFile">nouveau</label>
 			<label index="sort.asc">Tri ascendant</label>
 			<label index="sort.desc">Tri descendant</label>
