@@ -12,6 +12,7 @@
 	* Updated language files
 	* Added new icons for sorting and changed sort functionality
 	* Fixed sort functionality for folders
+	* Fixed language labels for directory sizes
 
 2010-01-09  Moreno Feltscher  <moreno@luagsh.ch>
 
